cmake_minimum_required(VERSION 3.8.2)
project(qlue VERSION 0.1.0)
include(recmake/recmake.cmake)
recmkConfigureProject()
find_package(clue 0.1 REQUIRED)
find_package(Qt5 5.9 REQUIRED COMPONENTS Core Gui Qml Quick QuickControls2)
add_subdirectory(src)
recmkInstallProject()
recmkPackageProject()
include(CPack)
